# backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.dev.yml
.github/workflows/: greetings.yml  rust.yml
migrations/2022-02-05-113618_create_users/: up.sql
migrations/2022-02-05-133252_create_posts/: up.sql
migrations/2022-03-26-183438_add_users/: up.sql
postman/: schema.json
postman/collections/: 0.2 _8eed7d4d-0946-4f63-8354-d5c1c0dbee9a.json  kripticc api_a7ef0997-2c60-4e4b-8d9a-a1b9e302c024.json  user API_5674ddb4-fc58-432b-882d-be0ad415357e.json
postman/schemas/: kripticc.yaml  schema.yaml
src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/models/: post.rs  schema.rs  user.rs
src/routes/: home.rs  test.rs
src/services/: posts.rs  users.rs
